// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Result ausnet renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <div
    css={
      {
        "name": "1109p9j",
        "next": undefined,
        "styles": "
          color: #3cb371;
        ",
      }
    }
  >
    <span
      aria-hidden={true}
      css={
        {
          "name": "1d2w5zj",
          "next": undefined,
          "styles": "
    display: block;
    font-size: 8rem;
  ",
        }
      }
      role="img"
    >
      😸
    </span>
    <p
      css={
        {
          "name": "1l9jf5t",
          "next": undefined,
          "styles": "
        font-size: 1.8rem;
        line-height: 1.2;
        margin: 1em 0;
      ",
        }
      }
    >
      Your rates seem to be acceptable.
       
    </p>
  </div>
  <table
    css={
      {
        "name": "li4c38",
        "next": undefined,
        "styles": "
    font-size: 1.6rem;
    font-variant-numeric: tabular-nums;
    margin-top: 4rem;
    text-align: left;
    width: 100%;

    th,
    td:first-of-type {
      font-weight: bold;
    }

    td:first-of-type {
      width: 40%;
    }

    th,
    td {
      background: #f9f9f9;
      border: 0.1rem solid white;
      padding: 1em;
    }
  ",
      }
    }
  >
    <thead>
      <tr>
        <th
          aria-label="Charge"
        />
        <th>
          Your charge (inc gst)
        </th>
        <th>
          Maximum charge (inc gst)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Supply / day
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          1.41460
        </td>
        <td>
          $
          1.41460
        </td>
      </tr>
      <tr>
        <td>
          Usage / kWh 
          (Block 1)
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          0.34770
        </td>
        <td>
          $
          0.34770
        </td>
      </tr>
      <tr>
        <td>
          Usage / kWh (Block 2)
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          0.34770
        </td>
        <td>
          $
          0.34770
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`Result default renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <div
    css={
      {
        "name": "1109p9j",
        "next": undefined,
        "styles": "
          color: #3cb371;
        ",
      }
    }
  >
    <span
      aria-hidden={true}
      css={
        {
          "name": "1d2w5zj",
          "next": undefined,
          "styles": "
    display: block;
    font-size: 8rem;
  ",
        }
      }
      role="img"
    >
      😸
    </span>
    <p
      css={
        {
          "name": "1l9jf5t",
          "next": undefined,
          "styles": "
        font-size: 1.8rem;
        line-height: 1.2;
        margin: 1em 0;
      ",
        }
      }
    >
      Your rates seem to be acceptable.
       
    </p>
  </div>
  <table
    css={
      {
        "name": "li4c38",
        "next": undefined,
        "styles": "
    font-size: 1.6rem;
    font-variant-numeric: tabular-nums;
    margin-top: 4rem;
    text-align: left;
    width: 100%;

    th,
    td:first-of-type {
      font-weight: bold;
    }

    td:first-of-type {
      width: 40%;
    }

    th,
    td {
      background: #f9f9f9;
      border: 0.1rem solid white;
      padding: 1em;
    }
  ",
      }
    }
  >
    <thead>
      <tr>
        <th
          aria-label="Charge"
        />
        <th>
          Your charge (inc gst)
        </th>
        <th>
          Maximum charge (inc gst)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Supply / day
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          1.16480
        </td>
        <td>
          $
          1.16480
        </td>
      </tr>
      <tr>
        <td>
          Usage / kWh 
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          0.28840
        </td>
        <td>
          $
          0.28840
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`Result gst exclusive renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <div
    css={
      {
        "name": "h7vb22",
        "next": undefined,
        "styles": "
          color: #ff4500;
        ",
      }
    }
  >
    <span
      aria-hidden={true}
      css={
        {
          "name": "1d2w5zj",
          "next": undefined,
          "styles": "
    display: block;
    font-size: 8rem;
  ",
        }
      }
      role="img"
    >
      😿
    </span>
    <p
      css={
        {
          "name": "1l9jf5t",
          "next": undefined,
          "styles": "
        font-size: 1.8rem;
        line-height: 1.2;
        margin: 1em 0;
      ",
        }
      }
    >
      You may be getting overcharged on both supply and usage.
       
      This could be costing you around $158 a year.
    </p>
  </div>
  <table
    css={
      {
        "name": "li4c38",
        "next": undefined,
        "styles": "
    font-size: 1.6rem;
    font-variant-numeric: tabular-nums;
    margin-top: 4rem;
    text-align: left;
    width: 100%;

    th,
    td:first-of-type {
      font-weight: bold;
    }

    td:first-of-type {
      width: 40%;
    }

    th,
    td {
      background: #f9f9f9;
      border: 0.1rem solid white;
      padding: 1em;
    }
  ",
      }
    }
  >
    <thead>
      <tr>
        <th
          aria-label="Charge"
        />
        <th>
          Your charge (inc gst)
        </th>
        <th>
          Maximum charge (inc gst)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Supply / day
        </td>
        <td
          css={
            {
              "name": "1xs99n",
              "next": undefined,
              "styles": "
    color: #ff4500;
  ",
            }
          }
        >
          $
          1.28128
        </td>
        <td>
          $
          1.16480
        </td>
      </tr>
      <tr>
        <td>
          Usage / kWh 
        </td>
        <td
          css={
            {
              "name": "1xs99n",
              "next": undefined,
              "styles": "
    color: #ff4500;
  ",
            }
          }
        >
          $
          0.31724
        </td>
        <td>
          $
          0.28840
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`Result rorted on supply but saving more on usage renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <div
    css={
      {
        "name": "1109p9j",
        "next": undefined,
        "styles": "
          color: #3cb371;
        ",
      }
    }
  >
    <span
      aria-hidden={true}
      css={
        {
          "name": "1d2w5zj",
          "next": undefined,
          "styles": "
    display: block;
    font-size: 8rem;
  ",
        }
      }
      role="img"
    >
      😸
    </span>
    <p
      css={
        {
          "name": "1l9jf5t",
          "next": undefined,
          "styles": "
        font-size: 1.8rem;
        line-height: 1.2;
        margin: 1em 0;
      ",
        }
      }
    >
      You may be getting overcharged on supply, but your usage charge looks good.
       
      You’re saving around $1132 per year compared to the Victorian Default Offer.
    </p>
  </div>
  <table
    css={
      {
        "name": "li4c38",
        "next": undefined,
        "styles": "
    font-size: 1.6rem;
    font-variant-numeric: tabular-nums;
    margin-top: 4rem;
    text-align: left;
    width: 100%;

    th,
    td:first-of-type {
      font-weight: bold;
    }

    td:first-of-type {
      width: 40%;
    }

    th,
    td {
      background: #f9f9f9;
      border: 0.1rem solid white;
      padding: 1em;
    }
  ",
      }
    }
  >
    <thead>
      <tr>
        <th
          aria-label="Charge"
        />
        <th>
          Your charge (inc gst)
        </th>
        <th>
          Maximum charge (inc gst)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Supply / day
        </td>
        <td
          css={
            {
              "name": "1xs99n",
              "next": undefined,
              "styles": "
    color: #ff4500;
  ",
            }
          }
        >
          $
          1.22435
        </td>
        <td>
          $
          1.16480
        </td>
      </tr>
      <tr>
        <td>
          Usage / kWh 
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          0.00000
        </td>
        <td>
          $
          0.28840
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`Result rorted on supply renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <div
    css={
      {
        "name": "h7vb22",
        "next": undefined,
        "styles": "
          color: #ff4500;
        ",
      }
    }
  >
    <span
      aria-hidden={true}
      css={
        {
          "name": "1d2w5zj",
          "next": undefined,
          "styles": "
    display: block;
    font-size: 8rem;
  ",
        }
      }
      role="img"
    >
      😿
    </span>
    <p
      css={
        {
          "name": "1l9jf5t",
          "next": undefined,
          "styles": "
        font-size: 1.8rem;
        line-height: 1.2;
        margin: 1em 0;
      ",
        }
      }
    >
      You may be getting overcharged on supply.
       
      This could be costing you around $22 a year.
    </p>
  </div>
  <table
    css={
      {
        "name": "li4c38",
        "next": undefined,
        "styles": "
    font-size: 1.6rem;
    font-variant-numeric: tabular-nums;
    margin-top: 4rem;
    text-align: left;
    width: 100%;

    th,
    td:first-of-type {
      font-weight: bold;
    }

    td:first-of-type {
      width: 40%;
    }

    th,
    td {
      background: #f9f9f9;
      border: 0.1rem solid white;
      padding: 1em;
    }
  ",
      }
    }
  >
    <thead>
      <tr>
        <th
          aria-label="Charge"
        />
        <th>
          Your charge (inc gst)
        </th>
        <th>
          Maximum charge (inc gst)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Supply / day
        </td>
        <td
          css={
            {
              "name": "1xs99n",
              "next": undefined,
              "styles": "
    color: #ff4500;
  ",
            }
          }
        >
          $
          1.22435
        </td>
        <td>
          $
          1.16480
        </td>
      </tr>
      <tr>
        <td>
          Usage / kWh 
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          0.28840
        </td>
        <td>
          $
          0.28840
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`Result rorted on usage but saving more on supply renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <div
    css={
      {
        "name": "1109p9j",
        "next": undefined,
        "styles": "
          color: #3cb371;
        ",
      }
    }
  >
    <span
      aria-hidden={true}
      css={
        {
          "name": "1d2w5zj",
          "next": undefined,
          "styles": "
    display: block;
    font-size: 8rem;
  ",
        }
      }
      role="img"
    >
      😸
    </span>
    <p
      css={
        {
          "name": "1l9jf5t",
          "next": undefined,
          "styles": "
        font-size: 1.8rem;
        line-height: 1.2;
        margin: 1em 0;
      ",
        }
      }
    >
      You may be getting overcharged on usage, but your supply charge looks good.
       
      You’re saving around $322 per year compared to the Victorian Default Offer.
    </p>
  </div>
  <table
    css={
      {
        "name": "li4c38",
        "next": undefined,
        "styles": "
    font-size: 1.6rem;
    font-variant-numeric: tabular-nums;
    margin-top: 4rem;
    text-align: left;
    width: 100%;

    th,
    td:first-of-type {
      font-weight: bold;
    }

    td:first-of-type {
      width: 40%;
    }

    th,
    td {
      background: #f9f9f9;
      border: 0.1rem solid white;
      padding: 1em;
    }
  ",
      }
    }
  >
    <thead>
      <tr>
        <th
          aria-label="Charge"
        />
        <th>
          Your charge (inc gst)
        </th>
        <th>
          Maximum charge (inc gst)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Supply / day
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          0.00000
        </td>
        <td>
          $
          1.16480
        </td>
      </tr>
      <tr>
        <td>
          Usage / kWh 
        </td>
        <td
          css={
            {
              "name": "1xs99n",
              "next": undefined,
              "styles": "
    color: #ff4500;
  ",
            }
          }
        >
          $
          0.31423
        </td>
        <td>
          $
          0.28840
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`Result rorted on usage renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <div
    css={
      {
        "name": "h7vb22",
        "next": undefined,
        "styles": "
          color: #ff4500;
        ",
      }
    }
  >
    <span
      aria-hidden={true}
      css={
        {
          "name": "1d2w5zj",
          "next": undefined,
          "styles": "
    display: block;
    font-size: 8rem;
  ",
        }
      }
      role="img"
    >
      😿
    </span>
    <p
      css={
        {
          "name": "1l9jf5t",
          "next": undefined,
          "styles": "
        font-size: 1.8rem;
        line-height: 1.2;
        margin: 1em 0;
      ",
        }
      }
    >
      You may be getting overcharged on usage.
       
      This could be costing you around $103 a year.
    </p>
  </div>
  <table
    css={
      {
        "name": "li4c38",
        "next": undefined,
        "styles": "
    font-size: 1.6rem;
    font-variant-numeric: tabular-nums;
    margin-top: 4rem;
    text-align: left;
    width: 100%;

    th,
    td:first-of-type {
      font-weight: bold;
    }

    td:first-of-type {
      width: 40%;
    }

    th,
    td {
      background: #f9f9f9;
      border: 0.1rem solid white;
      padding: 1em;
    }
  ",
      }
    }
  >
    <thead>
      <tr>
        <th
          aria-label="Charge"
        />
        <th>
          Your charge (inc gst)
        </th>
        <th>
          Maximum charge (inc gst)
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Supply / day
        </td>
        <td
          css={
            {
              "name": "xf633i",
              "next": undefined,
              "styles": "
    color: #3cb371;
  ",
            }
          }
        >
          $
          1.16480
        </td>
        <td>
          $
          1.16480
        </td>
      </tr>
      <tr>
        <td>
          Usage / kWh 
        </td>
        <td
          css={
            {
              "name": "1xs99n",
              "next": undefined,
              "styles": "
    color: #ff4500;
  ",
            }
          }
        >
          $
          0.31423
        </td>
        <td>
          $
          0.28840
        </td>
      </tr>
    </tbody>
  </table>
</section>
`;

exports[`Result without charges renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <span
    aria-hidden={true}
    css={
      {
        "name": "1d2w5zj",
        "next": undefined,
        "styles": "
    display: block;
    font-size: 8rem;
  ",
      }
    }
    role="img"
  >
    🤷‍♀️
  </span>
</section>
`;

exports[`Result without gst renders correctly 1`] = `
<section
  css={
    {
      "name": "dift5x",
      "next": undefined,
      "styles": "
    margin-top: 6rem;
    text-align: center;
  ",
    }
  }
>
  <span
    aria-hidden={true}
    css={
      {
        "name": "1d2w5zj",
        "next": undefined,
        "styles": "
    display: block;
    font-size: 8rem;
  ",
      }
    }
    role="img"
  >
    🤷‍♀️
  </span>
</section>
`;
